# stardust

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja  log_2023-12-26T15-17-03.txt  log_2023-12-26T15-19-01.txt  log_2023-12-26T15-27-15.txt  log_2023-12-26T16-22-04.txt  remote_build.bat
archived/assets/: test_mesh.stl
archived/profiling/: profile_1.py  serialweep.txt
archived/src/: CMakeLists.txt
archived/src/IO/: mesh_loader.cpp
archived/src/engine/: engine.cpp
archived/src/engine/cuda/: collision_detection.cuh  cuda_utils.hpp  physics_update.cu  physics_update.cuh  sh_collision_detection.cu  simulation_kernel.cu  sp_collision_detection.cu
archived/src/engine/cuda/collisions/SAP/: sap_collision.cuh
archived/src/render/: graphicsentity.hpp  guiwrapper.cpp  guiwrapper.hpp  light.cpp  light.hpp  renderer.hpp  renderutils.cpp  shader.cpp
profiling/: blocksweep.txt  blocksweep_sort.txt
sandbox/: CMakeLists.txt  particles.txt  positions.py  primitives.hpp  testDEM.cpp  testEngine.cpp  testGJK.cu  testLBVH.cu  testSAP.cu  test_stl.stl  util.hpp
sandbox/engine/: testEngine.cpp
sandbox/engine/stardustCollision/stardustBroadPhase/: stardustLBVH.cu  stardustLBVH.hpp
sandbox/engine/stardustCollision/stardustNarrowPhase/: stardustMPR.cu  stardustMPR.hpp
sandbox/engine/stardustCore/: application.hpp  stardustWorld.hpp
sandbox/engine/stardustDynamics/: stardustEngine.cu  stardustEngine.hpp
sandbox/engine/stardustGeometry/: stardustEntities.hpp  stardustEntityHandler.cpp  stardustEntityHandler.hpp  stardustPrimitives.hpp
sandbox/engine/stardustUtility/: cuda_utils.cuh  entry_point.hpp  load_data.hpp  types.hpp  util.hpp
sandbox/misc/: testDEM.cpp  util.hpp
scenes/: CMakeLists.txt  testDEM.cpp
setup/: star_test.json
src/: CMakeLists.txt
src/IO/: mesh_loader.hpp
src/engine/: engine.cpp  engine.hpp  entity.cpp  entity.hpp  grid.cpp  helper_math.hpp  testGridSAP.cu  types.hpp
src/engine/cuda/: collision_detection.cu  collision_detection.cuh  collision_resolution.cu  cuda_helpers.cuh  cuda_utils.hpp  physics_update.cu  physics_update.cuh  sh_collision_detection.cu  simulation_kernel.cu  simulationkernel.cu
src/engine/cuda/collisions/SAP/: sap_collision.cuh  sap_detection.cu  sap_reaction.cu
src/engine/entities/: entity_handler.cpp  entity_handler.hpp
src/render/: camera.cpp  camera.hpp  geometry.hpp  graphicsentity.cpp  inputhandler.cpp  inputhandler.hpp  renderer.cpp  renderer.hpp  renderutils.hpp  shader.hpp
src/render/shader/: fragment.glsl  vertex.glsl
